# xauusd-ml-ads

./: .gitignore  Makefile  README.md  pyproject.toml
config/: data.yaml  training.yaml
config/models/: baseline.yaml  chronos.yaml  fincast.yaml  random_forest.yaml  xgboost.yaml
data/processed/predictions/: cnn1d_regression_test.parquet  majority_classification_train.parquet  naive_zero_regression_test.parquet  random_forest_classification_test.parquet  random_forest_regression_val.parquet
docs/adr/: 0001-initial-project-structure.md
mlruns/0/: meta.yaml
mlruns/225558791573445441/: meta.yaml
mlruns/225558791573445441/03dbe468f31c420b871cfcf47985f3b2/: meta.yaml
mlruns/225558791573445441/06f25b0eea7247c7bcccd9025f00e2ac/: meta.yaml
mlruns/225558791573445441/2d7c15a3a6374762984cb3e8d5cd6374/: meta.yaml
mlruns/225558791573445441/5b24a2c19a844467bc3d1698d7649283/: meta.yaml
mlruns/225558791573445441/5d2b31fcfa2845cd91a633b6b7cf9fba/: meta.yaml
mlruns/225558791573445441/69437482fe7541ac9b54f947b909f084/: meta.yaml
mlruns/225558791573445441/8d37adf94e5c4d06b810938661ddd7b2/: meta.yaml
mlruns/225558791573445441/8dbbdc93b8a94434bc64334602acb548/: meta.yaml
mlruns/225558791573445441/8f0ea812131445de872a9b24d786d555/: meta.yaml
notebooks/: 00_colab_external_collection.ipynb  03_features_correlation.ipynb  04_colab_chronos.ipynb  05_colab_fincast.ipynb  06_colab_walkforward.ipynb  07_colab_moirai_walkforward.ipynb
notebooks/xauusd-ml-ads/: .env.example  .gitignore  Makefile
reports/: RESULTS.md  interpretations_figures.tex
reports/tables/: phase1_summary.json  phase2_summary.json  phase3_summary.json  phase4_baseline_summary.json  phase4_bigru_summary.json  phase4_chronos_summary.json  phase4_cnn_summary.json  phase4_rf_summary.json  phase4_xgboost_summary.json  phase5_master_comparison.csv  phase5_statistical_tests.json  phase5_walkforward_h4_summary.json
scripts/: 01_collect_all_data.py  02_build_features.py  03_build_splits.py  04a_train_baseline.py  04b_train_xgboost.py  04c_train_rf.py  04d_train_cnn.py  04e_train_bigru.py  04f_train_chronos.py  04g_train_fincast.py  05_walk_forward.py  06_final_report.py  07_comparison_figures.py
src/data/: align.py  collect_macro.py  collect_ohlcv.py  collect_sentiment.py
src/evaluation/: __init__.py  metrics_classification.py  metrics_regression.py  reports.py  statistical_tests.py  visualizations.py
src/features/: calendar.py  macro.py  pipeline.py  sentiment.py  target.py  technical.py
src/interpretability/: __init__.py
src/models/: base.py  baseline.py  bigru.py  chronos_model.py  cnn.py  fincast_model.py  moirai_model.py  random_forest.py  xgboost_model.py
src/preprocessing/: __init__.py  scaling.py  sequences.py  splits.py
src/training/: hyperparameter.py  trainer.py  walk_forward.py
src/utils/: config.py  logging.py  seed.py
tests/: test_align.py  test_anti_leakage.py  test_collect_ohlcv.py  test_features_target.py  test_metrics.py  test_models_baseline.py  test_models_bigru.py  test_models_cnn.py  test_models_random_forest.py  test_models_xgboost.py  test_scaling.py  test_sequences.py  test_splits.py  test_validate.py
xau-usd-ml-prediction-DpLS9/notebooks/: 04_colab_chronos.ipynb  05_colab_fincast.ipynb
(+327 files in other folders)
